Added jar: to JAR URL